# MyLLVMPass

./: CMakeLists.txt  LICENSE  README.md
CommonSubexpressionElimination/: CMakeLists.txt  Pass.cpp  README.md  test.c
ConstantPropagation/: CMakeLists.txt  Pass.cpp  README.md  test.c
DeadCodeElimination/: CMakeLists.txt  Pass.cpp  README.md  test.c
HelloWorld/: CMakeLists.txt  HelloWorld.cpp  Pass.cpp  README.md  test.c
LoopInvariantCodeMotion/: CMakeLists.txt  Pass.cpp  README.md  test.c
